fixed button appearence on ios

--- a/docs/style.css
+++ b/docs/style.css
@@ -713,7 +713,7 @@ padding: 10px;
     font-weight: bold;
     border-radius: 8px;
     border: none;
-    width: 1.5rem;
+    width: auto;
 }
 
 
